--- a/2-Node-Project/package.json
+++ b/2-Node-Project/package.json
@@ -5,12 +5,15 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7",
+    "request": "^2.88.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
