--- a/3-Node-Project/package.json
+++ b/3-Node-Project/package.json
@@ -11,7 +11,10 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "eslint": "^7.18.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^1.18.3",
+    "prettier": "^2.2.1"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
