--- a/shopping-website/package.json
+++ b/shopping-website/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "Shopping Site",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "Shopping Site",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Jerry McDonald",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.18.0",
