updates site name

--- a/shopping-website/package.json
+++ b/shopping-website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shopping Site",
+  "name": "Shopping-Site",
   "version": "1.0.0",
   "description": "Shopping Site",
   "main": "app.js",
